argo/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: minimal
  labels:
    name: minimal
