argo/my_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook-webui
  namespace: minimal
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: guestbook-webui
  template:
    metadata:
      labels:
        app: guestbook-webui
    spec:
      containers:
      - image: gcr.io/heptio-images/ks-guestbook-demo:0.2
        name: guestbook-webui
        ports:
        - containerPort: 80
