argo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: guestbook-webui
  namespace: minimal
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: guestbook-webui
